trying to fix project on ios

--- a/css/style.css
+++ b/css/style.css
@@ -20,9 +20,13 @@ body {
 }
 
 header, nav, footer, section, article, div {
+	box-sizing: -webkit-border-box;
+	box-sizing: -moz-border-box;
+	box-sizing: -ms-border-box;
 	box-sizing: border-box;
 	display: -webkit-flex;
 	display: flex;
+	-webkit-flex-wrap: wrap;
 	flex-wrap: wrap;
 }
 
